--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "watch": "nodemon --ext *",
-    "start": "node ./bin/www",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   }
 }
